[FIX] web_responsive: Change z-indexes * Rebalance z-indexes to fix overlay issue while still providing notification support

--- a/web_responsive/static/src/less/main.less
+++ b/web_responsive/static/src/less/main.less
@@ -22,7 +22,7 @@ main {
     overflow: hidden;
 }
 
-header {
+.navbar {
     z-index: 10;
 }
 
@@ -42,5 +42,5 @@ header {
 }
 
 .o_tooltip.active {
-    z-index: 2051;
+    z-index: 1051;
 }
